# liteparse-lancedb-pdf-qa

./: .gitignore  AGENTS.md  README.md  pyproject.toml
results/: answer_eval_metrics.json  extraction_performance.json  labeled_run_summary.json  metrics_openai_small_clip.json  retrieval_breakdowns.json  retrieval_breakdowns_openai_small_clip.json  storage_metrics_openai_small_clip.json
scripts/: _bootstrap.py  build_lancedb.py  download_climate_finance_bench.py  inspect_benchmark.py  parse_reports.py  run_answer_eval.py  run_retrieval_eval.py  summarize_retrieval_results.py
skills/lancedb/: SKILL.md
skills/lancedb/references/python/: api_reference.md  patterns.md  performance.md
skills/lancedb/references/typescript/: api_reference.md  patterns.md  performance.md
skills/lancedb/scripts/: check_materialization.py
src/: answer_eval.py  benchmark.py  config.py  embeddings.py  eval.py  index.py  parse.py  reports.py  retrieval.py  schema.py
