[project]
name = "liteparse-lancedb-pdf-qa"
version = "0.1.0"
description = "Local multimodal PDF evidence store for ESG reports with LiteParse + LanceDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lancedb>=0.33.0",
    "liteparse>=2.1.1",
    "numpy>=2.5.0",
    "open-clip-torch>=3.3.0",
    "openai>=2.43.0",
    "pillow>=12.2.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.107.0",
    "pylance>=7.0.0",
    "pymupdf>=1.27.2.3",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
]
